trying out inline block to fix out of bounds

--- a/src/components/MintPopup.module.css
+++ b/src/components/MintPopup.module.css
@@ -201,7 +201,6 @@
   backdrop-filter: blur(22.5px);
   user-select : none;
   z-index:1000;
-  contain: strict;
 }
 
 .MintOption {
@@ -209,6 +208,7 @@
   width: 3.5em;
   margin: .5em;
   margin-bottom: 1em;
+  display: inline-block;
 }
 
 .MintImg {
